--- a/css/input/mobile.scss
+++ b/css/input/mobile.scss
@@ -3,7 +3,7 @@
 @media screen and (max-width: 600px) {
 
   .button {
-    margin: 50px auto;
+    margin: 50px auto 0px auto;
   }
 
   body {
